--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -26,11 +26,26 @@ const double PI=3.14;
 class Circle
 {
     //访问权限
+    //公共权限
+    public:
     //属性
+    //半径
+    int m_r;
     //行为
-}
+    //获取圆的周长
+    double calculateZC()
+    {
+        return 2*PI*m_r 
+    }
+};
 int main()
 {
+    //通过圆类 创建具体的圆（对象）
+    Circle cl;
+    //给圆对象 的属性进行赋值
+    cl.m_r=10;
+    //2*PI*10=62.8
+    cout<<"圆的周长为："<<cl.calculateZC()<<endl;
     system("pause");
     return 0;
 }
