--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -16,6 +16,20 @@ C++认为万事万物都皆为对象，对象上有其属性和行为
 
 1.1封装的意义
 
+（1）将属性和行为作为一个整体，表现生活中的事物。
+
+在设计类的时候，属性和行为写在一起，表现事物
+
+语法：class 类名{
+
+访问权限：属性/行为
+
+}；
+
+（2）将属性和行为加以权限控制
+
+
+
 ```c++
 #include<iostream>
 using namespace std;
@@ -27,13 +41,13 @@ class Circle
 {
     //访问权限
     //公共权限
-    public:
+ public:
     //属性
     //半径
     int m_r;
     //行为
     //获取圆的周长
-    double calculateZC()
+    double calculateZC()  
     {
         return 2*PI*m_r 
     }
@@ -41,11 +55,71 @@ class Circle
 int main()
 {
     //通过圆类 创建具体的圆（对象）
+    //实例化 （通过一个类 创建一个对象的过程）
     Circle cl;
     //给圆对象 的属性进行赋值
     cl.m_r=10;
     //2*PI*10=62.8
     cout<<"圆的周长为："<<cl.calculateZC()<<endl;
+    system("pause");
+    return 0;
+}
+```
+
+```c++
+#include<iostream>
+using namespace std;
+//设计一个学生类，属性有姓名和学号
+//可以给姓名和学号复制，可以显示学生的姓名和学号
+//设计学生类
+class Student
+{
+    public://公共权限
+    
+    //类中的属性和行为 统称为成员
+    //属性 成员属性 成员变量
+    //行为 成员函数 成员方法
+    
+    
+    //属性
+    string m_Name;//姓名
+    int ,m_Id;//学号
+    //行为
+    //显示姓名和学号
+    void showStudent()
+    {
+        cout<<"姓名：  "<<m_Name<<"学号： "<<m_Id<<endl;
+    }
+    //给姓名赋值
+    void setName(string name)
+    {
+        m_Name=name;
+    }
+    //给学号赋值
+    void setId(int Id)
+    {
+        m_Id=Id;
+    }
+};
+int main()
+{
+    //创建一个具体学生，实例化对象
+    Student s1;
+    //给s1对象 进行属性赋值操作
+    //s1.m_Name="明志";
+    s1.setName("明志");
+    //s1.m_Id=1;
+    s1.setId(1);
+    //显示学生信息
+    s1.showStudent();
+    
+    
+    Student s2;
+    //给s1对象 进行属性赋值操作
+    s2.m_Name="玉";
+    s2.m_Id=2;
+    //显示学生信息
+    s2.showStudent();
     system("pause");
     return 0;
 }
