--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -28,8 +28,6 @@ C++认为万事万物都皆为对象，对象上有其属性和行为
 
 （2）将属性和行为加以权限控制
 
-
-
 ```c++
 #include<iostream>
 using namespace std;
@@ -127,3 +125,4 @@ int main()
 }
 ```
 
+nihaonihao
