--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -127,7 +127,9 @@ int main()
 }
 ```
 
-构造函数和析构函数
+## 2.对象的初始化和清理
+
+### 构造函数和析构函数
 
 ```c++
 #include<iostream>
@@ -136,7 +138,7 @@ using namespace std;
 //1.构造函数 进行初始化操作
 class Person
 {
-    Public:
+    public:
     //1.构造函数 进行初始化操作
     //没有返回值 不用写void
     //函数名 与类名相同
@@ -169,5 +171,80 @@ int main()
     return 0;
 }
 //会瞬间出现析构函数
+```
+
+### 构造函数的分类及调用
+
+```c++
+#include<iostream>
+using namespace std;
+//1.构造函数的分类及调用
+//分类
+//按照类型分类    普通构造函数和拷贝构造函数
+//按照参数分类    无参构造（默认构造）和有参构造
+class Person
+{
+    public:
+    //构造函数
+    Person()
+    {
+        cout<<"Person的无参构造函数调用"<<endl;
+    }
+    Person(int a)
+    {
+        age=a;
+        cout<<"Person的有参构造函数调用"<<endl;
+    }
+    //拷贝构造函数
+    Person(const Person &p)//按照引用方式传递
+    {
+        //将传入的人身上所有的属性，拷贝到我身上
+        age=p.age;
+        cout<<"Person的拷贝构造函数调用"<<endl;
+    }
+    ～Person()
+    {
+        cout<<"Person的析构函数调用"<<endl;
+    }
+    int age;
+};
+//调用
+void test01()
+{
+    //1.括号法
+    Person p1;//默认构造函数调用，test01调用完之后这个对象被释放掉
+    Person p2(10);//调用有参构造函数
+    Person p3(p2);//调用拷贝构造函数
+    
+    //注意事项
+    //调用默认构造函数时候，不要加（）
+   //因为下面这行代码，编译器会认为是一个函数的声明,不会认为在创建对象
+    //Person p1();
+    //void func();
+    
+    
+    cout<<"p2的年龄为"<<p2.age<<endl;
+    cout<<"p3的年龄为"<<p3.age<<endl;
+    //2.显示法
+    Person p1;
+    Person p2=Person(10);//有参构造
+    Person p3=Person(p2//拷贝构造
+                     
+    Person(10);//匿名对象
+    //特点：当前行执行结束后，系统会立即回收掉匿名对象
+    cout<<"aaaa"<endl;
+       //注意事项2
+       //不要利用拷贝构造函数 初始化匿名对象 编译器会认为Person(p3)===Person p3;对象的声明
+     Person(p3);
+    //3.隐式转换法
+    Person p4=10;//相当于 写了Person p4=Person(10) 有参构造
+    Person p5=p4;//拷贝构造
+}
+int main()
+{
+    test01;
+    system("pause");
+    return 0;
+}
 ```
 
