--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -231,7 +231,7 @@ void test01()
     Person p3=Person(p2//拷贝构造
                      
     Person(10);//匿名对象
-    //特点：当前行执行结束后，系统会立即回收掉匿名对象
+    //特点：当前行执行结束后，系统会立即回收掉匿名对象，马上析构
     cout<<"aaaa"<endl;
        //注意事项2
        //不要利用拷贝构造函数 初始化匿名对象 编译器会认为Person(p3)===Person p3;对象的声明
@@ -243,6 +243,85 @@ void test01()
 int main()
 {
     test01;
+    system("pause");
+    return 0;
+}
+```
+
+### 拷贝构造函数调用时机
+
+C++中拷贝构造函数调用时机通常有三种情况：
+
+1.使用一个已经创建完毕的对象来初始化一个新对象
+
+2.值传递的方式给函数参数传值
+
+3.以值方式返回局部对象
+
+```c++
+#include<iostream>
+using namespace std;
+//拷贝构造函数调用时机
+//1.使用一个已经创建完毕的对象来初始化一个新对象
+//2.值传递的方式给函数参数传值
+//3.以值方式返回局部对象
+class Person
+{
+public:
+ Person()
+    {
+        cout<<"Person的无参构造函数调用"<<endl;
+    }
+    Person(int age)
+    {
+ cout<<"Person的有参构造函数调用"<<endl;
+        m_Age=age;
+    }
+    Person(const Person &p)
+    {
+       cout<<"Person的拷贝构造函数调用"<<endl;
+        m_Age=p.m_Age;
+    }
+～Person()
+    {
+        cout<<"Person的析构函数调用"<<endl;
+    }
+    int a_Age;
+};
+//1.使用一个已经创建完毕的对象来初始化一个新对象
+void test01()
+{
+    Person p1(20);
+    Person p2(p1);
+    cout<<"p2的年龄"<<p2.m_Age<<endl;
+}
+
+//2.值传递的方式给函数参数传值
+void doWork(Person p)
+{
+    
+}
+void test02()
+{
+    Person p;
+    doWork(p);
+}
+//3.以值方式返回局部对象
+Person doWork2()
+{
+    Person p1;
+    cout<<(int*)&p1<<endl;
+    return p1;
+}
+void test03()
+{
+    Person p=doWork2();
+    cout<<(int*)&p<<endl;
+}
+int main()
+{
+    //test01();
+    test02;
     system("pause");
     return 0;
 }
