--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -282,7 +282,7 @@ public:
        cout<<"Person的拷贝构造函数调用"<<endl;
         m_Age=p.m_Age;
     }
-～Person()
+~Person()
     {
         cout<<"Person的析构函数调用"<<endl;
     }
@@ -345,5 +345,181 @@ int main()
 
 ### 深拷贝与浅拷贝
 
+深拷贝：在堆区重新申请空间，进行拷贝工作
+
+浅拷贝：简单的赋值拷贝操作 
+
+```c++
+#include<iostream>
+using namespace std;
+//深拷贝和浅拷贝
 
 
+class Person
+{
+    public:
+    Person()
+    {
+        cout<<"Person的默认构造函数调用"<<endl;
+    }
+    Person(int age,int height)
+    {
+        m_Height=new int(height);//指针接收堆区的数据
+        m_Age=age;
+ cout<<"Person的有参构造函数调用"<<endl;
+    }
+    
+    //自己实现拷贝构造函数 解决浅拷贝带来的问题
+   Person(const Person &p)
+   {
+       cout<<"Person拷贝构造函数调用"<<endl;
+       //如果不利用深拷贝在堆区创建新内存，会导致浅拷贝带来的重复释放堆区问题
+       m_Age=p.m_Age;
+       //m_Height=p.m_Height;编译器默认实现就是这行代码
+       //深拷贝操作
+    m_Height=new int(*p.m_Height);
+   }
+    
+    ~Person()
+    {
+        //析构代码，将堆区开辟数据做释放操作
+        if(m_Height!=NULL)
+        {
+            delete m_Height;
+            m_Height=NULL;
+        }
+        cout<<"Person的析构函数调用"<<endl;
+    }
+    int m_Age;//年龄
+    int *m_Height;//身高
+};
+void test01()
+{
+    Person p1(18,160);
+    cout<<"p1的年龄为： "<<p1.m_Age<<"身高为："<<*p1.m_Height<<endl;
+    Person p2(p1);
+    cout<<"p2的年龄为： "<<p2.m_Age<<"身高为："<<*p2.m_Height<<endl;
+}
+    
+
+
+int main()
+{
+    test01();
+    
+    system("pause");
+    return 0;
+}
+```
+
+浅拷贝的问题 要利用深拷贝进行解决
+
+如果属性有在堆区开辟的，一定要自己提供拷贝构造函数，防止浅拷贝带来的问题
+
+### 初始化列表
+
+```c++
+#include<iostream>
+using namespace std;
+//初始化列表
+class Person
+{
+    public:
+    //传统初始化操作
+    //Person(int a,int b,int c)
+    //{
+    //   m_A=a;
+    //   m_B=b;
+    //   m_C=c;
+    //}
+    
+    //初始化列表初始化属性
+    Person(int a,int b,int c):m_A(a),m_B(b),m_C(c)
+    {
+        
+    }
+    int m_A;
+    int m_B;
+    int m_C;
+};
+
+void test01()
+{
+    //Person p(10,20,30);
+    Person p(30,20,10);
+    cout<<"m_A="<<p.m_A<<endl;
+    cout<<"m_B="<<p.m_B<<endl;
+    cout<<"m_C="<<p.m_C<<endl;
+}
+
+int main()
+{
+    test01();
+    system("pause");
+    return 0;
+}
+```
+
+### 类对象作为类成员
+
+C++类中的成员可以是另一个类的对象，我们称该成员为对象成员
+
+```c++
+#include<iostream>
+using namespace std;
+#include <string.h>
+//类对象作为类成员
+//手机类
+class Phone
+{
+    public:
+    Phone(string pName)
+    {
+        cout<<"Phone的构造函数调用"<<endl;
+        m_PName=pName;
+    }
+    //手机品牌的名称
+    string m_PName;
+    ~Phone()
+    {
+        cout<<"Phone的析构函数调用"<<endl;
+    }
+};
+
+//人类
+class Person
+{
+    public:
+    //Phone m_Phone=pName 隐式转换法
+    Person(string name,string pName):m_Name(name),m_Phone(pName)
+    {
+        cout<<"Person的构造函数调用"<<endl;
+    }
+    //姓名
+    string m_Name;
+    //手机
+    Phone m_Phone;
+    ~Person()
+    {
+        cout<<"Person的析构函数调用"<<endl;
+    }
+};
+
+
+void test01()
+{
+    //当其他类对象作为本类成员，构造时候见构造类对象，再构造自身
+    //析构的顺序？析构顺序与构造相反！
+    Person p("张三"，"苹果MAX");
+    cout<<p.m_Name<<"拿着："<<p.m_Phone.m_PName<<endl;
+}
+
+int main()
+{
+    test01;
+    system("pause");
+    return 0;
+}
+```
+
+### 静态成员
