--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -523,3 +523,122 @@ int main()
 ```
 
 ### 静态成员
+
+静态成员就是在成员变量和成员函数前就加上关键字static,称为静态成员
+
+静态成员分为：
+
+1.静态成员变量
+
+（1）所有对象共享同一份数据
+
+（2）在编译阶段分配内存
+
+（3）类内声明，类外初始化
+
+2.静态成员函数
+
+（1）所有对象共享同一个函数
+
+（2）静态成员函数只能访问静态成员变量
+
+```c++
+#include<iostream>
+using namespace std;
+//静态成员变量
+class Person
+{
+public:
+    //（1）所有对象共享同一份数据
+    //（2)在编译阶段分配内存
+    //（3）类内声明，类外初始化
+    static int m_A;
+    //静态成员变量也是有访问权限的
+private:
+    static int m_B;
+};
+int Person::m_A=100;//类外初始化
+int Person::m_B=200;
+void test01()
+{
+    Person p;
+    //100
+    cout<<p.m_A<<endl;
+    Person p2;
+    p2.m_A=200;
+    //200//所有对象共享一份数据
+    cout<<p.m_A<<endl;
+}
+void test02()
+{
+    //静态成员变量 不属于某个对象上，所有对象都共享同一份数据
+    //因此静态成员变量有两种访问方式
+    
+    //1.通过对象进行访问静态成员变量
+    //Person p;
+    //cout<<p.m_A<<endl;
+    
+    //2.通过类名进行访问静态成员变量
+    cout<<Person::m_A<<endl;
+   //cout<<Person::m_B<<endl;//类外不能访问私有静态成员变量
+}
+int main()
+{
+    //test01();
+    test02();
+    
+    
+    system("pause");
+    return 0;
+}
+```
+
+```c++
+#include<iostream>
+using namespace std;
+//静态成员函数
+//（1）所有对象共享同一个函数
+//（2）静态成员函数只能访问静态成员变量
+
+class Person
+{
+public:
+    //静态成员函数
+    static void func()
+    {
+        m_A=100;//静态成员函数可以访问 静态成员变量
+        //m_B=200;//静态成员函数不可以访问 非静态成员变量，无法区分到底是哪个对象的m_B
+        cout<<"static void func调用"<<endl;
+    }
+    static int m_A;//静态成员变量
+    int m_B;//非静态成员变量
+    
+    //静态成员函数也是有访问权限的
+    private:
+    static void func2()
+    {
+        cout<<"static void func2的调用"<<endl;
+    }
+};
+int Person::m_A=0;
+//有两种访问方式
+void test01()
+{
+    //通过对象访问
+    Person p;
+    p.func();
+    //通过类名访问
+    Person::func();
+    //Person::func2();类外访问不到私有静态成员函数
+}
+int main()
+{
+    system("pause");
+    return 0;
+}
+```
+
+## 3. C++对象模型和this指针
+
+### 成员变量和成员函数分开存储
+
