--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -633,6 +633,7 @@ void test01()
 }
 int main()
 {
+    test01();
     system("pause");
     return 0;
 }
@@ -641,4 +642,62 @@ int main()
 ## 3. C++对象模型和this指针
 
 ### 成员变量和成员函数分开存储
+
+在C++中，类内的成员变量和成员函数分开存储，只有非静态成员变量才属于类的对象
+
+```c++
+#include<iostream>
+using namespace std;
+//成员变量 和 成员函数 分开存储的
+class Person
+{
+    int m_A;//非静态成员变量  属于类的对象上
+    static int m_B;//静态成员变量  不属于类的对象上
+    void func(){}f//非静态成员函数 不属于类的对象上
+    static void func(){}//静态成员函数 不属于类的对象上
+    
+};
+void test01;而宋
+{
+    Person p;
+    //空对象占用的内存空间为：1
+    //C++编译器会给每个空对象也分配一个字节空间，是为了区分空对象占内存的位置
+    //每个空对象也应该有一个独一无二的内存地址
+    cout<<"sizeof p= "<<sizeof(p)<<endl;
+}
+void test02()
+{
+    Person p;
+    //4
+  cout<<"sizeof p= "<<sizeof(p)<<endl;
+}
+
+int main()
+{
+    //test01();//知道空对象占多大内存
+    test02();
+    
+    system("pause");
+    return 0;
+}
+```
+
+### this指针概念
+
+**this指针指向被调用的成员函数所属的对象**
+
+this指针是隐含每一个非静态成员函数内的一种指针
+
+this指针不需要定义，直接使用即可
+
+this指针的用途：
+
+1.当形参和成员函数同名时，可用this指针来区分
+
+2.在类的非静态成员函数中返回对象本身，可以使用return *this
+
+```c++
+#iclude<iostream>
+
+```
 
