--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -698,6 +698,151 @@ this指针的用途：
 
 ```c++
 #iclude<iostream>
+using namespace std;
+class Person
+{
+    public:
+    Person(int age){
+        //this指针指向被调用的成员函数所属的对象
+        this->age=age;
+    }
+    Person& PersonAddAge(Person &p){
+        this->age+=p.age;
+        //this指向p2的指针，而*this指向的就是p2这个对象本体
+        return *this;
+    }
+    int age;//int m_Age;
+};
 
+//1,解决名称冲突
+void test01()
+{
+    Person p1(18);
+    cout<<"p1年龄为： "<<p1.age<<endl;
+}
+
+//返回对象本身用*this
+void test02()
+{
+    Person p1(10);
+    Person p2(10);
+    //p2.PersonAddAge(p1)==p2
+    //链式编程思想
+    p2.PersonAddAge(p1).PersonAddAge(p1).PersonAddAge(p1);
+    cout<<"p2的年龄为："<<p2.age<<endl;
+}
+int main()
+{
+    test01();
+    test02();
+    system("pause");
+    return 0;
+}
+```
+
+### 空指针访问成员函数
+
+C++中空指针也是可以调用成员函数的，但是也要注意有没有用到this指针
+
+如果用到this指针，需要加以判断保证代码的健壮性
+
+```c++
+#include<iostream>
+using namespace std;
+//空指针调用成员函数
+class Person
+{
+    public:
+    void showClassName(){
+        cout<<"this is Person class"<<endl;
+    }
+    void showPersonAge(){
+        //报错原因是因为传入的指针是	NULL
+        if(this==NULL)
+        {
+            return;
+        }
+        cout<<"age = "<<this->m_Age<<endl;//此时this是空指针
+    }
+    int m_Age;
+};
+void test01()
+{
+    Person* p=NULL;
+    P->showPersonName(); 
+    p->showPersonAge();
+}
+int main()
+{
+    test01();
+    
+    system("pause");
+    return 0;
+}
+```
+
+###  const  修饰成员函数
+
+**常函数：**
+
+成员函数加const后我们称为这个函数为常函数
+
+常函数内不可以修改成员属性
+
+成员属性声明时加关键字mutable后，在常函数中依然可以修改
+
+**常对象：**
+
+声明对象前加const称该对象为常对象
+
+常对象只能调用常函数
+
+```c++
+#include<iostream>
+using namespace std;
+//常函数
+class Person
+{
+public:
+    //this指针的本质是 指针常量 指针的指向是不可以修改的
+    //const Person*const this;
+    //在成员函数后面加const,修改的是this指向，让指针指向的值也不可以修改
+    void showPerson() const
+    {
+        this->m_B=100;
+       //this->m_A=100;
+        //this=NULL;//this指针不可以修改指针的指向的
+    }
+    void func(){
+        m_A=100;//在这个普通成员函数函数中可以修改属性
+    }
+    int m_A;
+    mutable int m_B;//特殊变量，即使在常函数中，也可以修改这个值，加关键字mutable
+};
+void test01()
+{
+    Person p;
+    p.showPerson();
+}
+//常对象
+void test02()//常对象不允许修改值
+{
+    const Person p;//在对象前加const,变为长度向
+    //p.m_A=100;
+    p.m_B=100;//m_B是特殊值，在常对象下也可以修改
+    //常对象只能调用常函数
+    
+    //p.func();//这个如果调用成功，变相的把值就修改了
+   p.showPerson()；
+}
+
+int main()
+{
+    test01();
+    
+    
+    system("pause");
+    return 0;
+}
 ```
 
