--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -846,3 +846,129 @@ int main()
 }
 ```
 
+## 4.友元
+
+生活中你的家有客厅（Public),有你的卧室（Private)
+
+客厅所有来的客人都可以进去，但是你的卧室是私有的，并不是所有人都可以进去
+
+但是呢，你也可以允许你的好朋友好闺蜜进去
+
+在程序里，有些私有属性 也想让类外特殊的一些函数或者类进行访问，就需要用到友元的技术
+
+友元的目的就是让一个函数或者类 访问另一个类中的私有成员
+
+友元的关键字是：<font color=red>friend</font>
+
+友元的三种实现：
+
+**1.全局函数做友元**
+
+**2.类做友元**
+
+**3.成员函数做友元**
+
+### 全局函数做友元
+
+```c++
+#include<iostream>
+using namespace std;
+#include<string>
+//建筑物类
+class Building
+{
+    //goodGay全局函数是Building好朋友，可以访问Building中私有成员
+    friend void goodGay(Building *building);
+    public:
+    Building()
+    {
+        m_SittingRoom="客厅";
+        m_BedRoom="卧室";
+    }
+    public:
+    string m_SittingRoom;//客厅
+    private:
+    string m_BedRoom;//卧室
+};
+//全局函数
+void goodGay(Building *building)
+{
+    cout<<"好基友全局函数 正在访问："<<building->m_SittingRoom<<endl;
+     cout<<"好基友全局函数 正在访问："<<building->m_BedRoom<<endl;
+}
+void test01()
+{
+    Building building;
+    goodGay(&building);
+}
+
+int main()
+{
+    test01();
+    system("pause");
+    return 0;
+}
+```
+
+### 类做友元
+
+```c++
+#include<iostranm>
+using namespace std;
+#include<string>
+//类做友元
+class Building;
+class GoodGay
+{
+  public:
+    GoodGay();
+    void visit();//参观函数访问Building中的属性
+    Building*building;
+};
+class Building
+{
+    //GoodGay类是本类的好基友，可以访问私有成员
+    friend class GoodGay;
+public:
+    Building();
+    public:
+    string m_SittingRoom;//客厅
+    private:
+    string m_BedRoom;//卧室
+    
+};
+//类外写成员函数
+Building::Building()
+{
+        m_SittingRoom="客厅";
+        m_BedRoom="卧室";
+}
+GoodGay::GoodGay()
+{
+    //创建建筑物对象
+    building=new Building;
+    
+}
+void GoodGay::visit()
+{
+ cout<<"好基友类 正在访问："<<building->m_SittingRoom<<endl;
+ cout<<"好基友类 正在访问："<<building->m_BedRoom<<endl;
+}
+void test01()
+{
+    GoodGay gg;
+    gg.visit();
+}
+int main()
+{
+    test01();
+    
+    
+    
+    system("pause");
+    return 0;
+}
+```
+
+### 成员函数做友元
+
