--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -1036,3 +1036,136 @@ int main()
 
 ```
 
+## 5.运算符重载
+
+运算符重载概念：对已有的运算符重新进行定义，赋予其另一种功能，以适用不同的数据类型
+
+### 加号运算符重载
+
+对于内置数据类型，编译器知道如何进行运算
+
+```c++
+int a=10;
+int b=10;
+int c=a+b;
+```
+
+作用：实现两个自定义数据类型相加的运算
+
+```c++
+#include<iostream>
+#include<string>
+using namespace std;
+//加号运算符重载
+
+class Person
+{
+public:
+ //1.成员函数重载+
+ /*Person operator+(Person& p)
+ {
+  Person temp;
+  temp.m_A = this->m_A + p.m_A;
+  temp.m_B = this->m_B + p.m_B;
+  return temp;
+ }*/
+ int m_A;
+ int m_B;
+};
+
+
+//2.全局函数重载+
+Person operator+(Person& p1, Person& p2)
+{
+ Person temp;
+ temp.m_A = p1.m_A + p2.m_A;
+ temp.m_B = p1.m_B + p2.m_B;
+ return temp;
+}
+//函数de重载版本
+Person operator+(Person& p1, int num)
+{
+ Person temp;
+ temp.m_A = p1.m_A + num;
+ temp.m_B = p1.m_B + num;
+ return temp;
+}
+void test01()
+{
+ Person p1;
+ p1.m_A = 10;
+ p1.m_B = 10;
+ Person p2;
+ p2.m_A = 10;
+ p2.m_B = 10;
+ //成员函数重载本质调用
+ //Person p3 = p1.operator+(p2);
+ //Person p3 = p1 + p2;//可以简化成这种形式
+ //全局函数重载的本质调用
+ //Person p3 = operator+(p1,p2);
+ /*cout << p3.m_A << endl;
+ cout << p3.m_B << endl;*/
+ //运算符重载也可以发生函数重载
+ Person p3 = p1 + 10;
+ cout << p3.m_A << endl;
+ cout << p3.m_B << endl;
+}
+int main(void)
+{
+{
+ test01();
+ system("pause");
+ return 0;
+}
+```
+
+总结1：对于内置的数据类型的表达式的运算符是不可能改变的
+
+总结2：不要滥用运算符重载
+
+### 左移运算符
+
+```c++
+#include<iostream>
+using namespace std;
+class Person
+{
+ friend ostream& operator<<(ostream& cout, Person& p);
+public:
+ Person(int a, int b)
+ {
+  m_A = a;
+  m_B = b;
+ }
+ //利用成员函数重载左移运算符p.operator<<(cout)简化版本p<<cout
+ //一般我们不会利用成员函数来重载<<运算符，以为无法实现cout在左边
+ /*void operator<<(ostream &cout,Person &p)
+ {
+  cout << p.m_A << endl;
+  cout << p.m_B << endl;
+ }*/
+private:
+ int m_A;
+ int m_B;
+};
+//只能利用全局函数来重载左移运算符
+ostream& operator<<(ostream &cout, Person &p) //这样写的本质就是operator<<(cout,p)简化版本就是cout<<p; 
+{
+ cout <<"m_A= "<< p.m_A << endl;
+ cout <<"m_B"<< p.m_B << endl;
+ return cout;
+}
+void test()
+{
+ Person p(10,10);
+ cout << p << "hello world" << endl;//链式编成
+}
+int main(void)
+{
+ test();
+ system("pause");
+ return 0;
+}
+```
+
+总结：重载左移运算符配合友元可以实现输出自定义数据类型
