--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -1238,3 +1238,222 @@ int main()
 ```
 
 ### 赋值运算符
+
+C++编译器至少给一个类添加四个函数
+
+1.默认构造函数（无参，函数体为空）
+
+2.默认析构函数（无参，函数体为空）
+
+3.默认拷贝构造函数，对属性进行值拷贝
+
+4.赋值运算符operator=,对属性进行值拷贝
+
+如果类中有属性指向堆区，做赋值操作时也会出现深浅拷贝问题
+
+```c++
+#include<iostream>
+using namespace std;
+
+class Person
+{
+    public:
+    Person(int age)
+    {
+        //将年龄数据开辟在堆区
+        m_Age=new int(age);
+    }
+    ~Person()
+    {
+        if(m_Age!=NULL)
+        {
+            delete m_Age;
+            m_Age-NULL;
+        }
+
+    }
+    //重载赋值运算符
+    Person& operator=(Person &p)
+    {
+        //编译器默认提供的是浅拷贝操作
+        //m_Age=p.m_age;
+        //应该首先判断是否有属性在堆区，如果有先释放干净，然后再进行深拷贝
+        if(m_Age!=NULL)
+        {
+            delete m_Age;
+            m_Age-NULL;
+        }
+        //深拷贝操作
+        m_Age=new int(*p.m_Age);
+        //返回对象本身
+        return *this;
+    }
+//年龄的指针
+    int *m_Age;
+
+};
+void test01()
+{
+    Person p1(18);
+    Person p2(20);
+    Person p3(30);
+    p3=p2=p1;
+    cout<<*(p1.m_Age)<<endl;
+    cout<<*(p2.m_Age)<<endl;
+    cout<<*(p3.m_Age)<<endl;
+    
+
+}
+int main()
+{
+test01();
+    return 0;
+}
+
+```
+
+### 关系运算符重载
+
+作用：重载关系运算符，可以让两个自定义类型对象进行对比操作
+
+```c++
+int a=10;
+int b=10;
+if(a==b)
+{
+    cout<<"a和b相等"<<endl;
+}
+Person p1;
+Person p2;
+if(p1==p2)
+{
+    cout<<"p1和p2相等"<<endl;
+}
+if(p1!=p2)
+{
+    cout<<"p1和p2不相等"<<endl;
+}
+```
+
+```c++
+#include<iostream>
+using namespace std;
+#include<string>
+class Person
+{
+    public:
+    //重载==
+    //返回的是true false 所以用bool
+    bool operator==(Person &p)
+    {
+        if(this->m_Name==p.m_Name&&this->m_Age==p.m_Age){
+            return true;
+        }
+        else
+        return false;
+    }
+    //重载!=
+    bool operator!=(Person &p)
+    {
+        if(this->m_Name==p.m_Name&&this->m_Age==p.m_Age){
+            return false;
+        }
+        else
+        return true;
+    }
+    Person(string name,int age)
+    {
+        m_Name=name;
+        m_Age=age;
+    }
+    string m_Name;
+    int m_Age;
+
+};
+void test()
+{
+    Person p1("duyujiao",18);
+    Person p2("duyujiao",18);
+    if(p1==p2){
+        cout<<"p1和p2是相等的"<<endl;
+    }
+    else{
+        cout<<"p1和p2是不相等的"<<endl;
+    }
+    if(p1!=p2){
+        cout<<"p1和p2是不相等的"<<endl;
+    }
+    else{
+        cout<<"p1和p2是相等的"<<endl;
+    }
+}
+int main()
+{
+
+test();
+    return 0;
+}
+```
+
+### 函数调用运算符
+
+1.函数调用运算符（）也可以重载
+
+2.由于重载后使用的方法非常像函数的调用，因此称为仿函数
+
+3.仿函数没有固定写法，非常灵活
+
+```c++
+#include<iostream>
+using namespace std;
+//函数调用运算符重载
+
+//打印输出类
+class MyPrint
+{
+    public:
+    //重载函数调用运算符
+    void operator()(string test)
+    {
+        cout<<test<<endl;
+    }
+};
+void MyPrint02(string test)
+{
+    cout<<test<<endl;
+}
+void test01()
+{
+    MyPrint myPrint;
+    myPrint("hello");//由于使用起来非常类似于函数调用，因此称为仿函数
+    MyPrint02("hello");
+}
+//仿函数非常灵活，没有固定的写法
+//加法类
+class MyAdd
+{
+    public:
+    int operator()(int a,int b)
+    {
+        return a+b;
+    }
+};
+void test02()
+{
+    MyAdd myadd;
+    int ret=myadd(100,100);
+    cout<<"ret= "<<ret<<endl;
+    
+    //匿名函数对象---特点：当前行被执行完立即释放
+    cout<<MyAdd()(100,100)<<endl;
+}
+
+int main()
+{
+   // test01();
+    test02();
+    return 0;
+    
+}
+```
+
