--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -1458,6 +1458,181 @@ int main()
 
 ## 5.继承
 
-### 基本语法
+## 6.多态
 
-继承
+### 多态的基本语法
+
+多态分为两种
+
+- 静态多态:函数重载和运算符重载属于静态多态，复用函数名
+- 动态多态:派生类和虚函数实现运行时多态
+
+静态多态和动态多态的区别
+
+- 静态多态的函数地址早绑定 - 编译阶段确定函数地址
+
+- 动态多态的函数地址晚绑定 - 运行阶段确定函数地址
+
+  
+
+  ```c++
+  #include<iostream>
+  using namespace std;
+  class Animal
+  {
+  public:
+  	//加上virtual变成虚函数,实现地址晚绑定
+  	virtual void speak()
+  	{
+  		cout << "动物在说话"<< endl;
+  	}
+  };
+  
+  class Cat :public Animal
+  {
+  public:
+  	void speak()
+  	{
+  		cout << "小猫在说话" << endl;
+  	}
+  };
+  
+  class Dog : public Animal
+  {
+  public:
+  	void speak()
+  	{
+  		cout << "小狗在说话" << endl;
+  	}
+  };
+  //执行说话的函数
+  //地址早绑定，在编译阶段就确定函数地址
+  //如果想让猫说话，那么这个函数的地址就不能提前绑定，需要在运行阶段进行绑定
+  
+  //动态多条满足条件
+  /*
+  1.有继承关系
+  2.子类重写父类的虚函数
+  */
+  //重写要求:函数返回值类型 函数名 参数列表 完全相同 
+  //动态多态的使用
+  /*
+  父类的指针或者引用 指向子类的对象//Animal &animal = cat;
+  */
+  
+  void doSpeak(Animal &animal)//Animal &animal = cat;
+  {
+  	animal.speak();
+  }
+  void test01()
+  {
+  	Cat cat;
+  	doSpeak(cat);
+  	Dog dog;
+  	doSpeak(dog);
+  }
+  int main(void)
+  {
+  	test01();
+  	system("pause");
+  	return 0;
+  }
+  
+  
+  ```
+
+  **总结**：
+
+  多态满足条件
+
+  - 有继承关系
+  - 子类重写父类中的虚函数
+
+  多态的使用条件
+
+  - 父类指针或引用指向子类对象
+
+  **重写**:函数返回值类型 函数名 参数列表 完全一致称为重写
+
+### 多态的深入剖析
+
+
+
+- 虚函数（表）指针
+
+  
+
+  > vfptr
+  >     v - virtual
+  >     f - function
+  >     ptr - pointer
+
+  虚函数表
+
+  > vftable
+  >     v - virtual
+  >
+  > ​    f - function
+  >
+  > ​    table-table
+
+![img](https://img-blog.csdnimg.cn/20210709154514422.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzUxNjA0MzMw,size_16,color_FFFFFF,t_70#pic_center)
+
+### 多态的案例分析--计算器类
+
+案例描述:
+分别利用普通写法和多态技术，设计实现两个操作数进行运算的计算器类。
+
+多态的优点：
+
+🅰代码组织结构清晰
+
+🅱可读性强
+
+©利于前后和后期的扩展以及维护
+
+```c++
+#include<iostream>
+using namespace std;
+#include<string>
+
+//分别利用普通写法和多态技术实现计算器
+
+//普通写法
+class Calculator
+{
+    public:
+    int getResult(string oper)
+    {
+        if(oper=="+"){
+            return m_Num1+m_Num2;
+        }
+        else if(oper=="-"){
+            return m_Num1-m_Num2;
+        }
+        else if(oper=="*"){
+            return m_Num1*m_Num2;
+        }
+    }
+    int m_Num1;//操作数1
+    int m_Num2;//操作数2
+};
+void test01()
+{
+    //创建计算器对象
+    Calculator c;
+    c.m_Num1=10;
+    c.m_Num2=10;
+    cout<<c.m_NUm1<<"+"<<c.m_Num2<<"="<<c.getResult<<endl;
+    cout<<c.m_NUm1<<"-"<<c.m_Num2<<"="<<c.getResult<<endl;
+    cout<<c.m_NUm1<<"*"<<c.m_Num2<<"="<<c.getResult<<endl;
+}
+
+
+int main()
+{
+    
+    return 0;
+}
+```
+
