--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -1628,10 +1628,9 @@ void test01()
     cout<<c.m_NUm1<<"*"<<c.m_Num2<<"="<<c.getResult<<endl;
 }
 
-
 int main()
 {
-    
+    test01();
     return 0;
 }
 ```
