--- a/C++/类和对象.md
+++ b/C++/类和对象.md
@@ -1495,7 +1495,7 @@ int main()
   	{
   		cout << "小猫在说话" << endl;
   	}
-  };
+  };	system("pause");
   
   class Dog : public Animal
   {
@@ -1578,7 +1578,7 @@ int main()
 
 ![img](https://img-blog.csdnimg.cn/20210709154514422.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzUxNjA0MzMw,size_16,color_FFFFFF,t_70#pic_center)
 
-### 多态的案例分析--计算器类
+### 多态的案例分析1--计算器类
 
 案例描述:
 分别利用普通写法和多态技术，设计实现两个操作数进行运算的计算器类。
@@ -1613,6 +1613,10 @@ class Calculator
         else if(oper=="*"){
             return m_Num1*m_Num2;
         }
+        //如果想扩展新的功能，需要修改源码
+        //在真实的开发中 提倡 开闭原则
+        //开闭原则：对扩展进行开发，对修改进行关闭
+         
     }
     int m_Num1;//操作数1
     int m_Num2;//操作数2
@@ -1623,15 +1627,353 @@ void test01()
     Calculator c;
     c.m_Num1=10;
     c.m_Num2=10;
-    cout<<c.m_NUm1<<"+"<<c.m_Num2<<"="<<c.getResult<<endl;
-    cout<<c.m_NUm1<<"-"<<c.m_Num2<<"="<<c.getResult<<endl;
-    cout<<c.m_NUm1<<"*"<<c.m_Num2<<"="<<c.getResult<<endl;
+    cout<<c.m_Num1<<"+"<<c.m_Num2<<"="<<c.getResult("+")<<endl;
+    cout<<c.m_Num1<<"-"<<c.m_Num2<<"="<<c.getResult("-")<<endl;
+    cout<<c.m_Num1<<"*"<<c.m_Num2<<"="<<c.getResult("*")<<endl;
 }
+//利用多态实现计算器
+//多态好处：
+//1.组织结构清晰
+//2.可读性强
+//3.对于前期和后期扩展以及维护性高
 
+//实现计算器抽象类
+class AbstractCalculator
+{
+    public:
+    virtual int getResult()
+    {
+        return 0;
+    }
+    int m_Num1;
+    int m_Num2;
+}; 
+//加法计算器类
+class AddCalculator:public AbstractCalculator
+{
+    public:
+    int getResult()
+    {
+        return m_Num1+m_Num2;
+    }
+};
+//减法计算器类
+class SubCalculator:public AbstractCalculator
+{
+    public:
+    int getResult()
+    {
+        return m_Num1-m_Num2;
+    }
+};
+//乘法计算器类
+class MulCalculator:public AbstractCalculator
+{
+    public:
+    int getResult()
+    {
+        return m_Num1*m_Num2;
+    }
+};
+void test02()
+{
+    //多态使用条件
+    //父类指针或者引用指向子类对象
+    
+    //加法运算
+    AbstractCalculator*abc=new AddCalculator;
+    abc->m_Num1=10;
+    abc->m_Num2=10;
+    cout<<abc->m_Num1<<"+"<<abc->m_Num2<<"="<<abc->getResult()<<endl; 
+    //用完后记得销毁
+    delete abc;
+    
+    //减法运算
+    abc=new SubCalculator;
+    abc->m_Num1=10;
+    abc->m_Num2=10;
+    cout<<abc->m_Num1<<"-"<<abc->m_Num2<<"="<<abc->getResult()<<endl; 
+    delete abc;
+    
+    //乘法运算
+    abc=new MulCalculator;
+      abc->m_Num1=10;
+    abc->m_Num2=10;
+    cout<<abc->m_Num1<<"*"<<abc->m_Num2<<"="<<abc->getResult()<<endl; 
+}
 int main()
 {
-    test01();
+    //test01();
+    test02();
     return 0;
 }
 ```
 
+**总结**：C++开发提倡利用多态设计程序架构，因为多态优点很多
+
+### 纯虚函数和抽象类
+
+在多态中，通常父类汇中虚函数的实现是毫无意义的，主要都是调用子类重写的内容。
+
+因此可以将虚函数改为纯虚函数。
+
+```
+纯虚函数语法 ：virtual 返回值类型 函数名 (参数列表) = 0;
+```
+
+当类中有了纯虚函数，这个类也称为抽象类。
+
+抽象类特点:
+
+1.无法实例化对象
+
+2.子类必须重写抽象类中的纯虚函数，否则也属于抽象类
+
+```c++
+#include<iostream>
+using namespace std;
+//纯虚函数和抽象类
+class Base
+{
+public:
+    //纯虚函数
+	//只要有一个纯虚函数,这个类称为抽象类
+	//抽象类特点：
+    //1.无法实例化对象
+    //2.抽象类的子类必须要重写父类中的纯虚函数，否则也属于抽象类
+	virtual void func() = 0;//注意:不要忘掉virtual!
+	
+};
+class Son :public Base
+{
+public:
+	void func()
+	{
+		cout << "func函数调用" << endl;
+	}
+};
+void test()
+{
+	//Base b; 抽象类无法实例化对象
+    //new Base;//抽象类是无法实例化对象
+	Son s;//子类必须重写父类的纯虚函数，否则无法实例化对象
+	Base* abc = new Son;
+	abc->func();
+}
+int main(void)
+{
+	test();
+	return 0;
+}
+
+```
+
+### 多态案例2--制作饮品
+
+案例描述:制作饮品的大致流程为:煮水-冲泡-倒入杯中-加入辅料
+
+利用多态技术实现本案例，提供抽象制作饮品基类，提供子类制作咖啡和茶水。
+
+```c++
+ #include<iostream>
+using namespace std;
+//多态案例-制作饮品
+class AbstractDrinking
+{
+public:
+	//煮水
+	virtual void Boil() = 0;
+	//冲泡 
+	virtual void Brew() = 0;
+	//倒入杯中
+	virtual void Pour() = 0;	
+	//加入辅料
+	virtual void PutSomething() = 0;
+	//制作饮品
+	void makeDrink()
+	{
+		Boil();
+		Brew();
+		Pour();
+		PutSomething();
+	}
+};
+//制作咖啡
+class Coffee :public AbstractDrinking
+{
+public:
+	//煮水
+	virtual void Boil()
+	{
+		cout << "把水煮开" << endl;
+	}
+	//冲泡 
+	virtual void Brew()
+	{
+		cout << "冲泡咖啡" << endl;
+	}
+	//倒入杯中
+	virtual void Pour()
+	{
+		cout << "倒入杯中" << endl;
+	}
+	//加入辅料
+	virtual void PutSomething()
+	{
+		cout << "加入糖和牛奶" << endl;
+	}
+};
+//制作茶水
+class Tea :public AbstractDrinking
+{
+public:
+	//煮水
+	virtual void Boil()
+	{
+		cout << "把矿泉水煮开" << endl;
+	}
+	//冲泡 
+	virtual void Brew()
+	{
+		cout << "冲泡茶叶" << endl;
+	}
+	//倒入杯中
+	virtual void Pour()
+	{
+		cout << "倒入杯中" << endl;
+	}
+	//加入辅料
+	virtual void PutSomething()
+	{ 
+		cout << "加入柠檬" << endl;
+	}
+};
+//制作函数
+void DoWork(AbstractDrinking* abs)//父类指针指向子类对象AbstractDrinking* abs = new Coffee;
+{
+	abs->makeDrink();
+	delete abs;//手动释放
+	//堆区的数据被销毁了但是指针的类型没变
+}
+//制作
+void test()
+{
+	DoWork(new Coffee);
+	cout << "------我是分割线------" << endl;
+	DoWork(new Tea);
+}
+int main(void)
+{
+	test();
+	return 0;
+}
+
+
+```
+
+### 虚析构和纯虚析构
+
+多态使用的时候，如果子类中有属性开辟到堆区，那么父类指针在释放的时无法调用到子类的析构代码
+
+解决方法:将父类中的析构函数改为**虚析构**或者**纯虚析构**
+
+虚析构和纯析构共性:
+
+可以解决父类指针释放子类对象
+
+都需要有具体的含函数实现
+
+虚析构和纯虚构的区别：如果是纯虚析构，该类属于抽象类，无法实例化对象
+
+虚析构语法：
+
+```c++
+virtual ~类名()
+{
+
+}
+```
+
+纯虚析构语法
+
+```c++
+virtual ~类名()=0；
+类名：：类名(){}
+```
+
+
+
+```c++
+#include<iostream>
+#include<string>
+using namespace std;
+//虚析构和纯虚析构
+class Animal
+{
+public:
+	Animal()
+	{
+		cout << "Animal的构造函数调用" << endl;
+	}
+	//利用虚析构 可以解决父类指针释放对象时不干净的问题
+	/*virtual ~Animal()
+	{
+		cout << "Animal的析构函数调用" << endl;
+	}*/
+	//纯虚析构,需要声明也需要实现
+	//有了纯虚析构之后，这个类也属于抽象类，无法实例化对象	
+	virtual ~Animal() = 0;
+	//纯虚函数，不需要实现
+	virtual void speak() = 0;
+};
+//纯虚析构函数
+Animal::~Animal()
+{
+	cout << "Animal纯析构函数调用" << endl;
+}
+class Cat :public Animal
+{
+public:
+	Cat(string name)
+	{
+		m_Name = new string(name);
+	}
+	virtual void speak()
+	{
+		cout << "Cat的构造函数调用" << endl;
+		cout << *m_Name << "小猫在说话" << endl;
+	}
+	~Cat()
+	{
+		if (m_Name != NULL)
+		{
+			cout << "Cat的析构函数调用" << endl;
+			delete m_Name;
+			m_Name = NULL;
+		}
+	}
+	string* m_Name;
+};
+void test01()
+{
+	Animal* animal = new Cat("Tom");
+	animal->speak();
+	/*
+	父类的指针在析构的时候，不会调用子类中的析构函数，
+	导致子类如果有堆区属性，会出现内存的泄漏情况。
+	解决:将父类的析构函数改为虚析构
+	*/
+	delete animal;
+}
+int main(void)
+{
+	test01();
+	return 0;
+}
+```
+
+**总结**:
+
+1. 虚析构或纯虚析构就是用来解决通过父类指针释放子类对象问题
+2. 如果子类中没有堆区数据，可以不写为虚析构或纯虚析构
+3. 拥有纯虚析构函数的类也属于抽象类
