--- a/C++/模板.md
+++ b/C++/模板.md
@@ -13,8 +13,24 @@
 
 ## 2.函数模板
 
+### 函数模板语法
+
 - C++另一种编程思想称为**泛型编程**，主要利用的技术就是模板
 - C++提供两种模板机制，**函数模板**和**类模板**。
+
+函数模板作用：
+
+建立一个通用的函数，其函数返回值类型和形参类型可以不具体制定，用一个**虚拟的类型**来代表。
+
+> template<typename T>
+>
+> 函数声明或定义
+
+```c++
+tempalte//声明创建模板
+typename//表明其后面的符号为一种数据类型，可以用class代替
+T//通用的数据类型，名称可以替换，通常为大写字母
+```
 
 ```c++
 #include <iostream>
@@ -89,3 +105,90 @@ int main()
 }
 ```
 
+**总结**：
+
+- 函数模板利用关键字template
+- 使用函数类型模板有两种方式：自动类型推导、显示指定类型
+- 模板的目的是为了提高复用性，将类型参数化
+
+### 函数模板注意事项
+
+**注意事项**:
+
+- 自动类型推导，必须推导出一致的数据类型T才能使用
+- 模板必须要确定出T的数据类型，才可以使用
+
+### 函数模板案例
+
+```c++
+#include<iostream>
+using namespace std;
+//实现通用 对数组进行排序的函数
+//规则 从大到小
+//算法 选择 
+//测试 char 数组 int 数组
+//交换的函数模板
+template<class T>
+void mySwap(T& a, T& b)
+{
+	T temp = a;
+	a = b;
+	b = temp;
+}
+
+template<class T>
+void mySort(T arr[],int len)
+{
+	for (int i =  0; i < len; i++)
+	{
+		int max = i;//认定最大值的下标
+		for (int j = i + 1; j < len; j++)
+		{
+			//认定的最大值比遍历出的数值要小，说明j下标的元素才是真正的最大值
+			if (arr[max] < arr[j])
+			{
+				max = j;
+			}
+		}
+		if (max != i)
+		{
+			//交换max和i元素
+			mySwap(arr[max], arr[i]);
+		}
+	}
+}
+
+//打印数组模板
+template<class T>
+void myPrint(T arr[], int len)
+{
+	for (int i = 0; i < len; i++)
+	{
+		cout << arr[i]<< endl;
+	}
+}
+
+void test01()
+{
+	char charArr[] = "badcfe";
+	int num = sizeof(charArr) / sizeof(char);
+	mySort(charArr, num);
+	myPrint(charArr, num);
+}
+void test02()
+{
+	int intArr[] = {2,3,7,8,9,7};
+	int num = sizeof(intArr) / sizeof(int);
+	mySort(intArr, num);
+	myPrint(intArr, num);
+}
+int main(void)
+{
+	test01(); 
+	test02();
+	return 0;
+}
+
+```
+
+模板
