--- a/C++/模板.md
+++ b/C++/模板.md
@@ -191,4 +191,179 @@ int main(void)
 
 ```
 
-模板
+## 3.类模板
+
+### 类模板语法
+
+类模板作用：
+
+建立一个通用类，类中的成员 数据类型可以不具体制定，用一个虚构的类型来代替
+
+语法：
+
+```c++
+template<typename T>
+类
+```
+
+解释：
+
+template---声明创建模板
+
+typename---表明其后面的符号是一种数据类型，可以用class代替
+
+T---通用的数据类型，名称可以替换，通常为大写字母
+
+```c++
+#include<iostream>
+using namespace std;
+//类模板
+template<typename NameType,typename AgeType>
+class Person
+{
+	public:
+	Person(NameType name,AgeType age)
+	{
+		this->m_Name=name;
+		this->m_Age=age;
+	}
+	void showPerson()
+	{
+		cout<<"name= "<<this->m_Name<<endl;
+		cout<<"age= "<<this->m_Age<<endl;
+	}
+	public:
+	NameType m_Name;
+	AgeType m_Age;
+
+};
+void test01()
+{
+	//指定NameType为string类型，AgeType为int类型
+	Person<string,int>p1("小杜",18);
+	p1.showPerson();
+}
+int main()
+{
+	test01();
+	return 0;
+}
+```
+
+总结：
+
+类模板和函数模板语法相似，在声明模板template后面加类，此类称为类模板
+
+### 类模板和函数模板区别
+
+类模板与函数模板区别主要有两点：
+
+1.类模板没有自动类型推导的使用方式
+
+2.类模板在模板参数列表中可以有默认参数
+
+```c++
+ #include<iostream>
+using namespace std;
+
+//类模板与函数模板区别
+template<class NameType,class AgeType=int>
+class Person
+{
+	public:
+	Person(NameType name,AgeType age)
+	{
+		this->m_Name=name;
+		this->m_Age=age;
+	}
+	void showPerson()
+	{
+		cout<<"name= "<<this->m_Name<<endl;
+		cout<<"age= "<<this->m_Age<<endl;
+	}
+	NameType m_Name;
+	AgeType  m_Age;
+
+};
+//1.类模板没有自动类型推导使用方式
+void test01()
+{
+	//Person p("孙悟空",999);//错误，无法用自动类型推导
+	Person<string,int>p1("sunwukong",999);//正确，只能用显示指定类型
+	p1.showPerson();
+
+}
+//2.类模板在模板参数列表中可以有默认参数,函数模板不允许
+void test02()
+{
+	Person<string>p("猪八戒",999);
+}
+int main()
+{
+	//test01();
+	test02();
+	return 0;
+}
+```
+
+### 类模板中成员函数创建时机
+
+类模板中成员函数和普通类中成员函数创建时机是有区别的
+
+普通类中的成员函数在调用的时候才去创建
+
+```c++
+#include<iostream>
+using namespace std;
+
+//类模板中成员函数创建时机
+// 类模板中的成员函数在调用的时候才去创建
+class Person1
+{
+	public:
+	void showPerson1()
+	{
+		cout<<"Person1 show"<<endl;
+	}
+
+
+};
+class Person2
+{
+	public:
+	void showPerson2()
+	{
+		cout<<"Person2 show"<<endl;
+	}
+};
+template<class T>
+class MyClass
+{
+	public:
+	T obj;
+	//类模板中的成员函数
+	void func1()
+	{
+		obj.showPerson1();
+	} 
+	void func2()
+	{
+		obj.showPerson2();
+	}
+	//不知道obj是什么数据类型
+
+};
+void test01()
+{
+	MyClass<Person1>m;//在这里创建了，然后就可以调用
+	m.func1();
+	//m.func2();
+}
+int main()
+{
+	test01();
+	return 0;
+}
+ 
+```
+
