--- a/C++/模板.md
+++ b/C++/模板.md
@@ -454,3 +454,119 @@ int main()
 }
 ```
 
+### 类模板与继承
+
+当类模板碰到继承的时候，需要注意以下几点：
+
+当子类继承的父类是一个类模板时，子类在声明的时候，要指定出父类中的T的类型
+
+如果不指定，编译器无法给子类分配内存
+
+如果想灵活指定父类中T的类型，子类也需要变为类模板
+
+```c++
+#include<iostream>
+using namespace std;
+
+//类模板与继承
+template<class T>
+class Base
+{
+	T m;
+};
+class Son :public Base<int>//必须要知道父类中T的数据类型才能继承给子类
+{
+
+};
+void test01()
+{
+	Son s1;
+}
+
+//如果想灵活指定父类中T类型，子类也需要变类模板
+template<class T1,class T2>
+class Son2 :public Base<T2>
+{
+public:
+	Son2()
+	{
+		cout << typeid(T1).name()<< endl;
+		cout << typeid(T2).name()<< endl;
+	}
+	T1 obj;
+};
+void test02()
+{
+	Son2<int, char>s2;
+}
+int main(void)
+{
+	test02();
+	system("pause");
+	return 0;
+}
+
+
+```
+
+### 类模板成员函数类外实现
+
+学习目标：能够掌握类模板中的成员函数类外实现
+
+```c++
+#include<iostream>
+using namespace std;
+//类模板成员函数类外实现
+template<class T1,class T2>
+class Person
+{
+	public:
+	Person(T1 name,T2 age);
+	/*{
+		this->m_Name=name;
+		this->m_Age=age;
+	}*/
+	void showPerson();
+	/*{
+		cout<<"姓名："<<this->m_Name<<endl;
+		cout<<"年龄："<<this->m_Age<<endl;
+	}*/
+	T1 m_Name;
+    T2 m_Age;
+
+};
+//构造函数类外实现
+template<class T1,class T2>
+Person<T1,T2>::Person(T1 name,T2 age)
+{
+	this->m_Name=name;
+		this->m_Age=age;
+}
+//成员函数类外实现
+template<class T1,class T2>
+void Person<T1,T2>::showPerson()
+//Person(T1 name,T2 age);对比一下Person作用域下，然后要证明是个类模板加上<T1,T2>
+{
+	cout<<"姓名："<<this->m_Name<<endl;
+    cout<<"年龄："<<this->m_Age<<endl;
+}
+void test()
+{
+	Person<string,int>p("xiaodu",18);
+	p.showPerson();
+}
+
+int main()
+{
+    test();
+	return 0;
+}
+```
+
+类模板与友元
+
+学习目标：掌握类模板配合友元函数的类内和类外实现
+
+全局函数类内实现：直接在类内声明友元即可
+
+全局函数类外实现：需要提前让编译器知道全局函数的存在
