--- a/C++/线程.md
+++ b/C++/线程.md
@@ -238,7 +238,7 @@ int pthread_equal(pthread_t t1,pthread_t t2);
 
 <font color=green>线程同步并不是多个线程同时对内存进行访问，而是按照先后顺序依次访问</font>
 
-### 同步的方式
+#### 同步的方式
 
 多个线程访问共享资源就需要线程同步，四种方法：互斥锁，读写锁，条件变量，信号量
 
@@ -256,7 +256,7 @@ if(number%2)
 pthread_mutex_unlock(&mutex);
 ```
 
-#### 互斥锁
+### 互斥锁
 
 ​       创建的锁对象中保存了当前这把锁的状态信息：锁定还是打开，如果是锁定状态还记录了给这把锁加锁的线程信息（线程 ID）。一个互斥锁变量只能被一个线程锁定，被锁定之后其他线程再对互斥锁变量加锁就会被阻塞，直到这把互斥锁被解锁，被阻塞的线程才能被解除阻塞。一般情况下，每一个共享资源对应一个把互斥锁，锁的个数和线程的个数无关。
 
@@ -297,7 +297,7 @@ int pthread_mutex_lock(pthread_mutex_t *mutex);//给代码段加锁
 
 尝试加锁
 
-```
+```c
 // 尝试加锁
 int pthread_mutex_trylock(pthread_mutex_t *mutex);
 ```
@@ -309,7 +309,7 @@ int pthread_mutex_trylock(pthread_mutex_t *mutex);
 
 解锁
 
-```
+```c
 // 对互斥锁解锁
 int pthread_mutex_unlock(pthread_mutex_t *mutex);
 ```
@@ -645,5 +645,11 @@ Thread B, id = 140637038962240, number = 99
 Thread B, id = 140637038962240, number = 100
 抢cpu时机片是随机的，并不一定是交替进行
 */
+
 ```
 
+###  死锁
+
+了当多个线程访问共享资源，需要加锁，如果锁使用不当，就会造成死锁这种现象。如果线程死锁造成的后果是：所有的线程都被阻塞，并且线程的阻塞是无法解开的（因为可以解锁的线程也被阻塞了）
+
+​      
