--- a/C++/线程.md
+++ b/C++/线程.md
@@ -1102,5 +1102,318 @@ int main()
 
 输出结果，因为使用了while()会一直的生产
 
+### 信号量
+
+信号量和条件变量一样用于处理生产者和消费者模型，用于阻塞生产者线程或消费者线程的运行，信号的类型为sem_t对应的头文件为<font color=red><semaphore.h></font>
+
+```c
+#include<semaphore.h>
+sem_t sem;
+```
+
+```c
+#include<semaphore.h>
+//初始化信号量/信号灯
+int sem_init(sem_t*sem,int pshared,unsigned int value);
+//资源释放，线程销毁之后调用这个函数即可
+//参数sem就是sem_init()的第一个参数
+int sem_destroy(sem_t *sem);
+```
+
+> 参数：
+>
+> sem:信号量变量地址
+>
+> pshared:
+>
+> 0:线程同步
+>
+> 非0：进程同步
+>
+> value:初始化当前信号量拥有的资源数（>=0),如果资源数为0,线程就会被阻塞了
+>
+> 
+
+```c
+//参数sem就是sem_init()的第一个参数
+//函数被调用sem中的资源就会被销毁1个，资源数-1
+int sem_wait(sem_t *sem);
+```
+
+当线程调用这个函数，并且 sem 中的资源数 >0，线程不会阻塞，线程会占用 sem 中的一个资源，因此资源数 - 1，直到 sem 中的资源数减为 0 时，资源被耗尽，因此线程也就被阻塞了。
+
+```c
+//参数sem就是sem_init()的第一个参数
+//函数被调用sem中的资源就会被销毁1个，资源数-1
+int sem_trywait(sem_t *sem);
+```
+
+当线程调用这个函数，并且 sem 中的资源数 >0，线程不会阻塞，线程会占用 sem 中的一个资源，因此资源数 - 1，直到 sem 中的资源数减为 0 时，资源被耗尽，但是线程不会被阻塞，直接返回错误号，因此可以在程序中添加判断分支，用于处理获取资源失败之后的情况。
+
+```c
+// 表示的时间是从1970.1.1到某个时间点的时间, 总长度使用秒/纳秒表示
+struct timespec {
+	time_t tv_sec;      /* Seconds */
+	long   tv_nsec;     /* Nanoseconds [0 .. 999999999] */
+};
+// 调用该函数线程获取sem中的一个资源，当资源数为0时，线程阻塞，在阻塞abs_timeout对应的时长之后，解除阻塞。
+// abs_timeout: 阻塞的时间长度, 单位是s, 是从1970.1.1开始计算的
+int sem_timedwait(sem_t *sem, const struct timespec *abs_timeout);
+```
+
+该函数的参数 abs_timeout 和 pthread_cond_timedwait 的最后一个参数是一样的，使用方法不再过多赘述。当线程调用这个函数，并且 sem 中的资源数 >0，线程不会阻塞，线程会占用 sem 中的一个资源，因此资源数 - 1，直到 sem 中的资源数减为 0 时，资源被耗尽，线程被阻塞，当阻塞指定的时长之后，线程解除阻塞。
+
+```c
+// 调用该函数给sem中的资源数+1
+int sem_post(sem_t *sem);
+```
+
+用该函数会将 sem 中的资源数 +1，如果有线程在调用 sem_wait、sem_trywait、sem_timedwait 时因为 sem 中的资源数为 0 被阻塞了，这时这些线程会解除阻塞，获取到资源之后继续向下运行。
+
+```c
+// 查看信号量 sem 中的整形数的当前值, 这个值会被写入到sval指针对应的内存中
+// sval是一个传出参数
+int sem_getvalue(sem_t *sem, int *sval);
+```
+
+通过这个函数可以查看 sem 中现在拥有的资源个数，通过第二个参数 sval 将数据传出，也就是说第二个参数的作用和返回值是一样的。
+
+#### 通过信号量实现生产者消费者模型
+
+##### 场景一：(总资源数为1)
+
+```c
+#include<stdio.h>
+#include<stdlib.h>
+#include<unistd.h>
+#include<string.h>
+#include<pthread.h>
+#include<semaphore.h>
+
+//生产者的信号量
+sem_t semp;
+//消费者的信号量
+sem_t semc;
+
+//创建互斥锁
+pthread_mutex_t mutex;
 
 
+
+//链表节点类型
+struct Node
+{
+    int number;//节点数据值
+    struct Node*next;//指向当前节点类型后继节点的地址
+};
+//创建头结点
+struct Node*head=NULL;
+
+//生产者
+//此处用的是链表没有上限
+void* producer(void* arg)
+{
+    //一直生产
+    while(1)
+    {
+        sem_wait(&semp);//判断semp里面的资源数为0的时候，所有的生产者都阻塞在这里了
+
+        //创建新节点
+        struct Node*newNode=(struct Node*)malloc(sizeof(struct Node));
+        //初始化节点
+        newNode->number=rand()%1000;//获取随机数，1000以内
+        //节点的连接，添加到链表的头部，新节点就是新的头结点
+        newNode->next=head;
+        //head指针前移
+        head=newNode;
+        printf("生产者,id:%ld ,number:%d\n",pthread_self(),newNode->number);
+        sem_post(&semc);//生产者生产了就通知消费者来消费啦
+       
+        //生产的慢一点哦
+        sleep(rand()%3);//0 1 2
+    }
+
+    return NULL;
+
+}
+//消费者
+//消费者有下限，如果链表为空，就要阻塞消费者线程
+void* consumer(void*arg)
+{
+    while(1)
+    {
+        sem_wait(&semc);
+        //链表的头结点，将其删除
+        struct Node*node=head;
+        printf("消费者,id:%ld ,number:%d\n",pthread_self(),node->number);
+        head=node->next;
+        free(node);
+ 
+        sem_post(&semp);//通知生产者生产
+        sleep(rand()%3);
+    }
+    return NULL;
+}
+
+
+
+int main()
+{
+    //生产者
+    sem_init(&semp,0,1);//资源总数为1
+    //消费者->刚开始不能消费，资源数量初始化为0,消费者线程启动就阻塞了
+    sem_init(&semc,0,0); 
+    //初始化
+    pthread_mutex_init(&mutex,NULL);
+
+
+    //创建两个数组，这两个数组里面来存储子线程创建出来的ID
+    pthread_t t1[5],t2[5];
+    for(int i=0;i<5;i++){
+        pthread_create(&t1[i],NULL,producer,NULL);
+    }
+    for(int i=0;i<5;i++){
+        pthread_create(&t2[i],NULL,consumer,NULL);
+    }
+
+    //线程资源的释放
+    for(int i=0;i<5;i++){
+        //阻塞等待子线程的退出
+        pthread_join(t1[i],NULL);
+        pthread_join(t2[i],NULL);
+    }
+    
+
+    pthread_mutex_destroy(&mutex);
+    sem_destroy(&semp);
+    sem_destroy(&semc);
+
+    return 0;
+}
+```
+
+通过测试代码可以得到如下结论：如果生产者和消费者使用的信号量总资源数为 1，那么不会出现生产者线程和消费者线程同时访问共享资源的情况，不管生产者和消费者线程有多少个，它们都是顺序执行的。
+
+![image-20230530205611854](/home/oem/.config/Typora/typora-user-images/image-20230530205611854.png)
+
+##### 场景二：（总资源数大于一）
+
+```c
+#include<stdio.h>
+#include<stdlib.h>
+#include<unistd.h>
+#include<string.h>
+#include<pthread.h>
+#include<semaphore.h>
+
+//生产者的信号量
+sem_t semp;
+//消费者的信号量
+sem_t semc;
+
+//创建互斥锁
+pthread_mutex_t mutex;
+
+
+
+//链表节点类型
+struct Node
+{
+    int number;//节点数据值
+    struct Node*next;//指向当前节点类型后继节点的地址
+};
+//创建头结点
+struct Node*head=NULL;
+
+//生产者
+//此处用的是链表没有上限
+void* producer(void* arg)
+{
+    //一直生产
+    while(1)
+    {
+        //pthread_mutex_lock(&mutex);不能放在sem_wait的上面，会导致所有的生产者阻塞，还有消费者也会阻塞
+        sem_wait(&semp);//判断semp里面的资源数为0的时候，所有的生产者都阻塞在这里了
+        pthread_mutex_lock(&mutex);
+        //创建新节点
+        struct Node*newNode=(struct Node*)malloc(sizeof(struct Node));
+        //初始化节点
+        newNode->number=rand()%1000;//获取随机数，1000以内
+        //节点的连接，添加到链表的头部，新节点就是新的头结点
+        newNode->next=head;
+        //head指针前移
+        head=newNode;
+        printf("生产者,id:%ld ,number:%d\n",pthread_self(),newNode->number);
+
+        pthread_mutex_unlock(&mutex);
+
+        sem_post(&semc);//生产者生产了就通知消费者来消费啦
+        //生产的慢一点哦
+        sleep(rand()%3);//0 1 2
+    }
+
+    return NULL;
+
+}
+//消费者
+//消费者有下限，如果链表为空，就要阻塞消费者线程
+void* consumer(void*arg)
+{
+    while(1)
+    {
+        //pthread_mutex_lock(&mutex);放在上面，如果下面这行代码判断为0然后阻塞，消费者就会阻塞在这里了
+        sem_wait(&semc);
+         pthread_mutex_lock(&mutex);
+        //链表的头结点，将其删除
+        struct Node*node=head;
+        printf("消费者,id:%ld ,number:%d\n",pthread_self(),node->number);
+        head=node->next;
+        free(node);
+
+        pthread_mutex_lock(&mutex);
+ 
+        sem_post(&semp);//通知生产者生产
+        sleep(rand()%3);
+    }
+    return NULL;
+}
+
+
+
+int main()
+{
+    //生产者，最多有五个生产者可以同时运行，涉及到一个问题同时添加会出现问题，要线程同步了
+    //资源总数大于1了
+    sem_init(&semp,0,5);
+    //消费者->刚开始不能消费，资源数量初始化为0,消费者线程启动就阻塞了
+    sem_init(&semc,0,0); 
+    //初始化
+    pthread_mutex_init(&mutex,NULL);
+
+
+    //创建两个数组，这两个数组里面来存储子线程创建出来的ID
+    pthread_t t1[5],t2[5];
+    for(int i=0;i<5;i++){
+        pthread_create(&t1[i],NULL,producer,NULL);
+    }
+    for(int i=0;i<5;i++){
+        pthread_create(&t2[i],NULL,consumer,NULL);
+    }
+
+    //线程资源的释放
+    for(int i=0;i<5;i++){
+        //阻塞等待子线程的退出
+        pthread_join(t1[i],NULL);
+        pthread_join(t2[i],NULL);
+    }
+    
+    
+    pthread_mutex_destroy(&mutex);
+    sem_destroy(&semp);
+    sem_destroy(&semc);
+
+    return 0;
+}
+```
+
+![image-20230530210025282](/home/oem/.config/Typora/typora-user-images/image-20230530210025282.png)
