--- a/C++/线程.md
+++ b/C++/线程.md
@@ -20,7 +20,7 @@
 
 ## 创建线程
 
-每个线程对应一个唯一的线程ID，ID的类型为pthread_t,无符号长整形。
+每个线程对应一个唯一的线程ID，ID的类型为pthread_t,无符号长整形
 
 ```c
 pthread_t pthread_self(void)//返回当前进程的ID
