--- a/C++/线程.md
+++ b/C++/线程.md
@@ -106,7 +106,7 @@ int pthread_join(pthread_t thread,void **retval);
 struct Test
 {
 	int num;
-	int age
+	int age;
 };
 struct Test t;
 void *callback(void *arg)
