--- a/C++/线程.md
+++ b/C++/线程.md
@@ -134,7 +134,7 @@ int main()
 	void *ptr; // ptr指向&t
 	pthread_join(tid, &ptr);
 	struct Test *pt = (struct Test *)ptr;
-	printf("num=%d,age=%d\n", pt->num, pt->age)
+	printf("num=%d,age=%d\n", pt->num, pt->age);
 	// pthread_join(tid,NULL);不接受子线程传出来的数据
 	return 0;
 }
