--- a/C++/线程.md
+++ b/C++/线程.md
@@ -769,7 +769,7 @@ pthread_rwlock_t rwlock;
 2.使用读写锁的写锁锁定了临界区，线程对临界区的访问是<font color=green>串行</font>的，<font color=red>写锁是独占的。</font>按先后顺序依次执行
 3.使用读写锁分别对两个临界区加了读锁和写锁，两个线程要同时访问者两个临界区，访问写锁临界区的线程继续运行，访问读锁临界区的线程阻塞，<font color=red>因为写比读的优先级高。</font>
 
-​        如果说程序中所有的线程都对共享资源做写操作，使用读写锁没有优势，和互斥锁是一样的，如果说程序中所有的线程都对共享资源有写也有读操作，并且对共享资源读的操作越多，读写锁更有优势。
+​        如果说程序中所有的线程都对共享资源做写操作，使用读写锁没有优势，和互斥锁是一样的，如果说程序中所有的线程都对共享资源有写也有读操作，并且对共享资源读的操作越多，读写锁更有优势
 
 
 
