--- a/Java/集合框架.md
+++ b/Java/集合框架.md
@@ -266,7 +266,7 @@ public class Test {
 
 }
 ```
-### 遍历方式
+### List遍历方式
 ```java
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -309,7 +309,7 @@ public class Test {
 
    }
 
-
+    
 
 }
 ```
