--- a/Java/集合框架.md
+++ b/Java/集合框架.md
@@ -313,4 +313,86 @@ public class Test {
 
 }
 ```
+### LinkedList
+Linkeedlist集合的底层原理   
+基于双链表实现的，特点：查询慢，增删相对较快，但对首尾元素进行增删改查的速度是极快的      
+LinkedList新增了：很多首尾操作的特有方法     
+方法名称      
+public void addFirst(E e)         
+public void addLast(E e)          
+public E getFirst()          
+public E getLast()                
+public E removeFirst()        
+public E removeLast()     
+说明      
+在该列表开头插入指定的元素           
+将指定的元素追加到此列表的未尾          
+返回此列表中的第一个元素   
+返回此列表中的最后一个元素    
+从此列表中删除并返回第一个元素          
+从此列表中删除并返回最后一个元素      
+应用场景：用来设计队列         
+```java
+import java.text.ParseException;
+import java.util.LinkedList;
 
+//目标：掌握LinkedList集合的使用
+public class Test {
+   public static void main(String[] args) throws ParseException {
+       //1.创建一个队列
+       LinkedList<String> queue=new LinkedList<>();
+       queue.addLast("第一号人");
+       queue.addLast("第二号人");
+       queue.addLast("第三号人");
+       queue.addLast("第四号人");
+       System.out.println(queue);//[第一号人, 第二号人, 第三号人, 第四号人]
+
+       System.out.println(queue.removeFirst());//第一号人
+       System.out.println(queue.removeFirst());//第二号人
+       System.out.println(queue.removeFirst());//第三号人
+       System.out.println(queue);//[第四号人]
+       
+
+
+   }
+
+
+
+}
+```
+应用场景：用来设计栈
+```java
+import java.text.ParseException;
+import java.util.LinkedList;
+
+//目标：掌握LinkedList集合的使用
+public class Test {
+   public static void main(String[] args) throws ParseException {
+       //1.创建一个栈对象
+       LinkedList<String> stack=new LinkedList<>();
+       //压栈(push)
+       stack.addFirst("第一颗子弹");
+       stack.addFirst("第二颗子弹");
+       stack.addFirst("第三颗子弹");
+       stack.addFirst("第四颗子弹");
+       System.out.println(stack);//[第四颗子弹, 第三颗子弹, 第二颗子弹, 第一颗子弹]
+       //出栈(pop)
+       System.out.println(stack.removeFirst());//第四颗子弹
+       System.out.println(stack.removeFirst());//第三颗子弹
+       System.out.println(stack);//[第二颗子弹, 第一颗子弹]
+
+
+   }
+
+
+
+}
+```
+## Set集合
+![Alt text](image-4.png)
+ Set系列集合特点:无序:添加数据的顺序和获取出的数据顺序不一致;不重复; 无索引;         
+HashSet:无序、不重复、无索引。         
+LinkedHashSet: 有序、不重复、无索引。                   
+TreeSet: 排序、不重复、无索引。             
+
+ 
