--- a/Java/集合框架.md
+++ b/Java/集合框架.md
@@ -393,6 +393,72 @@ public class Test {
  Set系列集合特点:无序:添加数据的顺序和获取出的数据顺序不一致;不重复; 无索引;         
 HashSet:无序、不重复、无索引。         
 LinkedHashSet: 有序、不重复、无索引。                   
-TreeSet: 排序、不重复、无索引。             
+TreeSet: 排序、不重复、无索引。     
+```java
+import java.text.ParseException;
+import java.util.*;
+
+//目标：掌握LinkedList集合的使用
+public class Test {
+   public static void main(String[] args) throws ParseException {
+      //1.创建一个set集合的对象
+     Set<Integer> set=new HashSet<>();//创建一个HashSet的集合对象，一行经典代码，HashSet:无序不重复，无索引
+      Set<Integer> set1=new LinkedHashSet<>();//有序，不重复，无索引
+      Set<Integer> set2=new TreeSet<>();//默认可排序（升序）  不重复 无索引
+
+      set2.add(666);
+      set2.add(555);
+      set2.add(555);
+      set2.add(888);
+      set2.add(888);
+      set2.add(777);
+      set2.add(777);
+
+      set1.add(666);
+      set1.add(555);
+      set1.add(555);
+      set1.add(888);
+      set1.add(888);
+      set1.add(777);
+      set1.add(777);
+
+      set.add(666);
+      set.add(555);
+      set.add(555);
+      set.add(888);
+      set.add(888);
+      set.add(777);
+      set.add(777);
+      System.out.println(set);//[888, 777, 666, 555]
+      System.out.println(set1);//[666, 555, 888, 777]
+      System.out.println(set2);//[555, 666, 777, 888]
+
+
+   }
+
+
+
+}
+```
+### HashSet集合的底层实现原理
+哈希值   
+就是一个int类型的数值，Java中每个对象都有一个哈希值   
+Java中的所有对象，都可以调用Object类提供的hashCode方法，返回该对象自己的哈希值     
+`public int hashCode();返回对象的哈希码值  `     
+对象哈希值的特点：    
+同一个对象多次调用hashCode()方法返回的哈希值是相同的    
+不同的对象，它们的哈希值一般不相同，但也有可能会相同（哈希碰撞）    
+`int(-21亿多~21亿多)`         
+ HashSet集合的底层原理     
+ 基于哈希表的实现    
+ 哈希表是一种增删查改数据，性能都较好的数据结构     
+ 哈希表   
+ JDK8之前，哈希表=数组+链表      
+ JDK8开始，哈希表=数组+链表+红黑树     
+ 
+
+
+
+
 
  
